# BliMe-linter

./: .gitignore  eg4_t.ll  egglobptr.ll  mr-a-trans.ll  select-element-trans.ll
bc/: .editorconfig  README.md
bc/c-tests/: .gitignore  Makefile  common.h  test-dfl-array.c  test-select.c  test_inputs.sh
bc/llvm-test/: .gitignore  FileCheck-header.ll  (+8 more)
hester-tests/: points-to-test.bc  points-to-test.c  points-to-test.ll  select-array.bc  select-array.ll  svf-test.bc  svf-test.c  svf-test.ll
llvm/lib/Analysis/SVF/: CMakeLists.txt
llvm/lib/Analysis/SVF/CUDD/: CMakeLists.txt
llvm/lib/Analysis/SVF/DDA/: ContextDDA.cpp  DDAClient.cpp  DDAPass.cpp  DDAStat.cpp  FlowDDA.cpp
llvm/lib/Analysis/SVF/Graphs/: ConsG.cpp  ExternalPAG.cpp  ICFG.cpp  OfflineConsG.cpp  PAG.cpp  PTACallGraph.cpp  SVFG.cpp  SVFGOPT.cpp  SVFGStat.cpp  ThreadCallGraph.cpp  VFG.cpp
llvm/lib/Analysis/SVF/MSSA/: MemPartition.cpp  MemRegion.cpp  MemSSA.cpp  SVFGBuilder.cpp
llvm/lib/Analysis/SVF/MTA/: FSMPTA.cpp  LockAnalysis.cpp  LockResultValidator.cpp  MHP.cpp  MTA.cpp  MTAAnnotator.cpp  MTAResultValidator.cpp  MTAStat.cpp  PCG.cpp  TCT.cpp
llvm/lib/Analysis/SVF/MemoryModel/: LocationSet.cpp  MemModel.cpp  PAGBuilderFromFile.cpp  PointerAnalysis.cpp  PointerAnalysisImpl.cpp
llvm/lib/Analysis/SVF/SABER/: DoubleFreeChecker.cpp  FileChecker.cpp  LeakChecker.cpp  ProgSlice.cpp  SaberAnnotator.cpp  SaberCheckerAPI.cpp  SaberSVFGBuilder.cpp  SrcSnkDDA.cpp
llvm/lib/Analysis/SVF/SVF-FE/: BreakConstantExpr.cpp  CHG.cpp  CPPUtil.cpp  CallGraphBuilder.cpp  DCHG.cpp  DataFlowUtil.cpp  Graph2Json.cpp  ICFGBuilder.cpp  LLVMModule.cpp  LLVMUtil.cpp  PAGBuilder.cpp  SymbolTableInfo.cpp
llvm/lib/Analysis/SVF/Util/: Conditions.cpp  ExtAPI.cpp  NodeIDAllocator.cpp  Options.cpp  PTAStat.cpp  PathCondAllocator.cpp  SVFUtil.cpp  ThreadAPI.cpp  TypeBasedHeapCloning.cpp
llvm/lib/Analysis/SVF/WPA/: Andersen.cpp  AndersenHCD.cpp  AndersenHLCD.cpp  AndersenLCD.cpp  AndersenSCD.cpp  AndersenSFR.cpp  AndersenStat.cpp  AndersenWaveDiff.cpp  AndersenWaveDiffWithType.cpp  CSC.cpp  FlowSensitive.cpp  FlowSensitiveStat.cpp  FlowSensitiveTBHC.cpp  Steensgaard.cpp  TypeAnalysis.cpp  VersionedFlowSensitive.cpp  VersionedFlowSensitiveStat.cpp  WPAPass.cpp
llvm/lib/Transforms/BlindedComputation/: BlindedDataUsage.cpp  BlindedInstrConversion copy 2.cpp  BlindedInstrConversion copy.cpp  BlindedInstrConversion.cpp  BlindedTaintTracking.cpp  CMakeLists.txt  FunctionCloning.cpp  LLVMBuild.txt  ModifyMetadata.cpp
shazz/: auto_param_blinding.c  cycle_detection.c  return_value_blinding.c  return_value_blinding_complex.c  wllvm.sh  wllvm_demo_1.c  wllvm_demo_2.c
workspace/: blind.c  blind.h  compile.sh  demo.c  randombytes.c  randombytes.h  run.sh
(+216 files in other folders)
